--- a/themes/maupassant/source/css/style.scss
+++ b/themes/maupassant/source/css/style.scss
@@ -743,9 +743,11 @@ pre {
   display: block;
   width: 4px;
   background: #eee;
-  top: -3%;
+  /*top: -3%;*/
+  top: -15%;
   right: -30px;
-  bottom: -3%;
+  /*bottom: -3%;*/
+  bottom: -15%;
 }
 #process .present,
 #process .born {
@@ -775,21 +777,24 @@ pre {
 }
 #process .present {
   position: absolute;
-  top: -3%;
+  /*top: -3%;*/
+  top: -15%;
   right: 0;
   margin-top: -20px;
   line-height: 100%;
 }
 #process .born {
   position: absolute;
-  bottom: -3%;
+  /*bottom: -3%;*/
+  bottom: -15%;
   right: 0;
   margin-bottom: -20px;
   line-height: 100%;
 }
 #process .dot_tp {
   position: absolute;
-  top: -3%;
+  /*top: -3%;*/
+  top: -15%;
   right: -35px;
   background-color: transparent;
   height: 15px;
@@ -802,7 +807,8 @@ pre {
 }
 #process .dot_bt {
   position: absolute;
-  bottom: -3%;
+  /*bottom: -3%;*/
+  bottom: -15%;
   right: -35px;
   background-color: transparent;
   height: 15px;
